# logs

./: README.md
csapp/: CMakeLists.txt  README.md  ch2.p55.md  ch2.p97.md
csapp/exercises/: CMakeLists.txt
csapp/exercises/src/: CMakeLists.txt  calc.c  calc.h  run.c  run.ch2.p55.c  show_bytes.c
csapp/exercises/test/: CMakeLists.txt  calc_test.cpp  ch2.p55.cpp
csapp/src/: CMakeLists.txt
pps23/: test.tex
pps23/acmart-primary/samples/: test.tex
pps23/hw0/: CMakeLists.txt  Makefile
pps23/hw0/src/: hw0.cxx
pps23/text_book_study/: ipp2-source.tgz  mkdocs.yml
pps23/text_book_study/docs/: ch5_OpenMP.md  index.md
pps23/text_book_study/ipp-source-use/ch5/: Makefile  omp_hello  omp_hello.c  omp_ver.cpp
pps23/text_book_study/ipp2-source/ch2/: histogram.c
pps23/text_book_study/ipp2-source/ch4/: linked_list.c  my_rand.c  my_rand.h  pth_cond_bar.c  pth_do_nothing.c  pth_ll_mult_mut.c  pth_ll_one_mut.c  pth_ll_rwl.c  pth_msg_sem  pth_msg_sem.c  pth_msg_sem_mac  pth_msg_sem_mac.c  pth_tokenize.c  pth_tokenize_r.c
pps23/text_book_study/ipp2-source/ch5/: bubble.c  odd_even.c  omp_fib.c  omp_fib_broken1.c  omp_fib_broken2.c  omp_fib_time.c  omp_fibo.c  omp_hello.c  omp_hello_err_chk.c  omp_odd_even1.c  omp_odd_even2.c  omp_pi.c  omp_private.c  omp_sin_sum.c  omp_tokenize.c  omp_tokenize_r.c  omp_trap1.c  omp_trap2a.c  omp_trap2b.c  omp_trap3.c  serial_fib  serial_fib.c  trap.c
pps23/text_book_study/ipp2-source/ch6/: INDEX  cuda_bitonic_mult.cu  cuda_bitonic_one.cu  cuda_hello.cu  cuda_hello1.cu  cuda_trap1.cu  cuda_vec_add.cu  cuda_vec_add_cp.cu  pass_by_ref1.cu  (+5 more)
(+38 files in other folders)
